FIX: education align

--- a/components/section/education-section/styles.module.css
+++ b/components/section/education-section/styles.module.css
@@ -129,6 +129,10 @@
 }
 /* DESKTOP */
 @media (min-width: 1024px) {
+    .education_container {
+        width: 100%;
+        justify-content: flex-start;
+    }
     .education_title_slider {
         animation: none;
     }
